tests/miniJava/neg/004275_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { if public int [] java ( ) { return 0 ; } }
